p2/service.yaml
apiVersion: v1

kind: Service

metadata:
  name: app2-service 

spec:
  type: NodePort
  
  selector:
    app: app2
  
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30080
