p2/ingress.yaml
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:
  name: webapp-ingress

spec:
  ingressClassName: traefik
  
  rules:
    - host: app2.com
      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: app2-service
                port:
                  number: 80
